working on 2nd section

--- a/index.html
+++ b/index.html
@@ -112,7 +112,8 @@
                 <div class="container mt-5">
                     <img class="img-fluid" src="./assets/2nd-truck.webp" alt="">
                 </div>
-                <div class="container mt-5">
+
+                <div class="container mt-5 pb-5">
                     <div class="row  ">
                         <div class="col-6 ">
                             <img class="img-fluid" src="./assets/3rd-truck.webp" alt="">
@@ -162,6 +163,20 @@
         <!-- 2nd section -->
         <section>
 
+            <div class="bg-dark">
+                <div class="container">
+                    <p class="font-monospace text-danger fs-5">Our Services</p>
+                    <div class="d-flex justify-content-between">
+                        <div class="">
+
+                            <p class="font-monospace text-white fs-3">Excellence in Transportation for Fresh Goods</p>
+                        </div>
+                        <div class="">
+                            <button type="button" class="btn btn-danger">Contact Us</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
 
