--- a/index.html
+++ b/index.html
@@ -161,23 +161,123 @@
         </section>
 
         <!-- 2nd section -->
-        <section>
+        <section class="bg-black pt-5">
 
-            <div class="bg-dark">
-                <div class="container">
-                    <p class="font-monospace text-danger fs-5">Our Services</p>
-                    <div class="d-flex justify-content-between">
-                        <div class="">
 
-                            <p class="font-monospace text-white fs-3">Excellence in Transportation for Fresh Goods</p>
-                        </div>
-                        <div class="">
-                            <button type="button" class="btn btn-danger">Contact Us</button>
-                        </div>
+            <div class="container">
+                <p class="font-monospace text-danger fs-5">Our Services</p>
+                <div class="d-flex justify-content-between">
+                    <div class="">
+
+                        <p class="font-monospace text-white fs-3">Excellence in Transportation for Fresh Goods</p>
+                    </div>
+                    <div class="">
+                        <button type="button" class="btn btn-danger">Contact Us</button>
                     </div>
                 </div>
             </div>
+            <div class="container">
+                <div class="row ">
+                    <div class="col-4 bg-dark">
+                        <div class="container p-4">
+                            <img class="img-fluid" src="./assets/ship-icon.webp" alt="" width="30px">
+                            <p class="font-monospace text-white fs-3">Dry Van</p>
+                            <p class="font-monospace text-white fs-5">Maintain the integrity of your products with our
+                                dependable temperature-controlled vehicles, which are ideal for transporting perishable
+                                items.</p>
+                            <img src="./assets/right-arrow.png" alt="" width="30px">
+                        </div>
+                    </div>
+                    <div class="col-4 bg-dark">
+                        <div class="container p-4">
+                            <img class="img-fluid" src="./assets/aeroplane-icon.webp" alt="" width="30px">
+                            <p class="font-monospace text-white fs-3">Drop Equipment</p>
+                            <p class="font-monospace text-white fs-5">You can easily move your freight with our drop
+                                equipment trucks, which are made to make loading and unloading go more quickly.</p>
+                            <img src="./assets/right-arrow.png" alt="" width="30px">
+                        </div>
+                    </div>
+                    <div class="col-4 bg-dark">
+                        <div class="container p-4">
+                            <img class="img-fluid" src="./assets/fleet-icon.webp" alt="" width="30px">
+                            <p class="font-monospace text-white fs-3">Dedicated Fleet</p>
+                            <p class="font-monospace text-white fs-5">Our trucks offer around-the-clock shipping
+                                services across North America, tailored to meet your business's unique transportation
+                                needs.</p>
+                            <img src="./assets/right-arrow.png" alt="" width="30px">
+                        </div>
+                    </div>
+                </div>
+                <div class="row mt-3">
+                    <div class="col-4 bg-dark">
+                        <div class="container p-4">
+                            <img class="img-fluid" src="./assets/post-icon.webp" alt="" width="30px">
+                            <p class="font-monospace text-white fs-3">Temp Controlled</p>
+                            <p class="font-monospace text-white fs-5">Maintain the integrity of your products with our
+                                dependable temperature-controlled vehicles, which are ideal for transporting perishable
+                                items.</p>
+                            <img src="./assets/right-arrow.png" alt="" width="30px">
+                        </div>
+                    </div>
+                    <div class="col-4 bg-dark">
+                        <div class="container p-4">
+                            <img class="img-fluid" src="./assets/container-icon.webp" alt="" width="30px">
+                            <p class="font-monospace text-white fs-3">Power Only</p>
+                            <p class="font-monospace text-white fs-5">Mondson Truck Dispatch offers power-only truck
+                                services to make sure that trailers that don't have their own power can be transported
+                                safely</p>
+                            <img src="./assets/right-arrow.png" alt="" width="30px">
+                        </div>
+                    </div>
+                    <div class="col-4 bg-dark">
+                        <div class="container p-4">
+                            <img class="img-fluid" src="./assets/container-icon.webp" alt="" width="30px">
+                            <p class="font-monospace text-white fs-3">Flatbed</p>
+                            <p class="font-monospace text-white fs-5">Flatbed truck services from Mondson Truck Dispatch
+                                will get your specialized and large goods to its destination quickly and safely.</p>
+                            <img src="./assets/right-arrow.png" alt="" width="30px">
+                        </div>
+                    </div>
+
+                </div>
+                <div class="row mt-3">
+                    <div class="col-4 bg-dark ">
+                        <div class="container p-4">
+                            <img src="./assets/girl-icon.webp" alt="" width="30px">
+                            <p class="font-monospace text-white fs-3">Drayage</p>
+                            <p class="font-monospace text-white fs-5">We specialize in drayage, offering efficient
+                                container transport across North America to enhance supply chain efficiency for
+                                businesses.</p>
+                            <img src="./assets/right-arrow.png" alt="" width="30px">
+                        </div>
+                    </div>
+                    <div class="col-4 bg-dark ">
+                        <div class="container p-4">
+                            <img src="./assets/girl-icon.webp" alt="" width="30px">
+                            <p class="font-monospace text-white fs-3">Expedited</p>
+                            <p class="font-monospace text-white fs-5">At Mondson Truck Dispatch, we specialize in
+                                expedited trucking and offer quick and easy transportation options.</p>
+                            <img src="./assets/right-arrow.png" alt="" width="30px">
+                        </div>
+                    </div>
+                    <div class="col-4 bg-dark ">
+                        <div class="container p-4">
+                            <img src="./assets/girl-icon.webp" alt="" width="30px">
+                            <p class="font-monospace text-white fs-3">Partial Truckload</p>
+                            <p class="font-monospace text-white fs-5">Mondson Truck Dispatch offers cost-effective,
+                                efficient LTL and partial truckload services, ensuring timely transportation for smaller
+                                shipments.</p>
+                            <img src="./assets/right-arrow.png" alt="" width="30px">
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+
+
         </section>
+
     </main>
 
     <footer></footer>
