working on section

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
         </section>
 
         <!-- 2nd section -->
-        <section class="bg-black pt-5">
+        <section class="bg-black pt-5 pb-5">
 
 
             <div class="container">
@@ -176,6 +176,7 @@
                     </div>
                 </div>
             </div>
+
             <div class="container">
                 <div class="row ">
                     <div class="col-4 bg-dark">
@@ -276,6 +277,72 @@
 
 
 
+        </section>
+
+        <!--  -->
+        <section class="bg-dark">
+
+
+            <div class="container bg-danger  ">
+                <div class="row ">
+                    <div class="col ">
+                        <div class="container pt-5">
+
+
+                            <p class="font-monospace fs-5 text-white"> GET STARTED</p>
+                            <p class="font-monospace fs-3 text-white">Your Questions, Our Priority – Contact Us</p>
+                            <p class="font-monospace fs-5 text-white">Reach out to Mondson Trucking for reliable
+                                transportation services. We’re here to assist you with any inquiries or needs</p>
+                            <button type="button" class="btn btn-outline-dark text-white">Get Started</button>
+                            <button type="button" class="btn btn-dark">Contact Us</button>
+
+
+
+                        </div>
+                    </div>
+                    <div class="col">
+                        <img class="img-fluid" src="./assets/red-truck.webp" alt="">
+                    </div>
+                </div>
+            </div>
+
+        </section>
+
+
+        <section class="bg-dark p-5">
+            <div class="container text-center text-white">
+                <p class="font-monospace fs-5 text-danger">WHY CHOOSE US</p>
+                <p class="font-monospace fs-3 ">Expert Logistics Shipping for Your Needs</p>
+            </div>
+
+            <div class="container text-center">
+                <div class="row text-white">
+                    <div class="col-md-4">
+                        <img src="./assets/locker.png" alt="" width="30px">
+
+                        <p class="font-monospace text-white fs-3"> Dependable Service </p>
+                        <p class="font-monospace text-white fs-5"> We ensure on-time delivery with our fleet of
+                            53-foot reefer units, maintaining high standards of care. </p>
+
+                    </div>
+                    <div class="col-md-4">
+                        <img src="./assets/web.png" alt="" width="30px">
+                        <p class="font-monospace text-white fs-3"> Specialized Equipment </p>
+                        <p class="font-monospace text-white fs-5">Our 53-foot reefer units are equipped for
+                            over-the-road transportation, ensuring your perishable goods arrive fresh. </p>
+                    </div>
+                    <div class="col-md-4">
+
+                        <img class="img-fluid" src="./assets/truck-back.webp" alt="">
+                    </div>
+                </div>
+                <div class="col">
+                </div>
+                <div class="col">
+                    Column
+                </div>
+
+            </div>
         </section>
 
     </main>
