--- a/index.html
+++ b/index.html
@@ -312,38 +312,66 @@
         <section class="bg-dark p-5">
             <div class="container text-center text-white">
                 <p class="font-monospace fs-5 text-danger">WHY CHOOSE US</p>
-                <p class="font-monospace fs-3 ">Expert Logistics Shipping for Your Needs</p>
+                <p class="font-monospace fs-2 ">Expert Logistics Shipping for Your Needs</p>
             </div>
 
             <div class="container text-center">
                 <div class="row text-white">
-                    <div class="col-md-4">
-                        <img src="./assets/locker.png" alt="" width="30px">
+                    <div class="col">
+                        <div class="row-cols-2">
+                            <div class="col-12">
 
-                        <p class="font-monospace text-white fs-3"> Dependable Service </p>
-                        <p class="font-monospace text-white fs-5"> We ensure on-time delivery with our fleet of
-                            53-foot reefer units, maintaining high standards of care. </p>
+                                <img src="./assets/locker.png" alt="" width="30px">
+
+                                <p class="font-monospace text-white fs-3"> Dependable Service </p>
+                                <p class="font-monospace text-white fs-5"> We ensure on-time delivery with our fleet of
+                                    53-foot reefer units, maintaining high standards of care. </p>
+                            </div>
+                            <div class="col-12">
+
+                                <img src="./assets/web.png" alt="" width="30px">
+                                <p class="font-monospace text-white fs-3"> Specialized Equipment </p>
+                                <p class="font-monospace text-white fs-5">Our 53-foot reefer units are equipped for
+                                    over-the-road transportation, ensuring your perishable goods arrive fresh. </p>
+                            </div>
+                        </div>
+
 
                     </div>
-                    <div class="col-md-4">
-                        <img src="./assets/web.png" alt="" width="30px">
-                        <p class="font-monospace text-white fs-3"> Specialized Equipment </p>
-                        <p class="font-monospace text-white fs-5">Our 53-foot reefer units are equipped for
-                            over-the-road transportation, ensuring your perishable goods arrive fresh. </p>
-                    </div>
-                    <div class="col-md-4">
+                    <div class="col-sm-12">
+                        <div class="container">
+                            <img class="img-fluid" src="./assets/truck-back.webp" alt="">
+                        </div>
 
-                        <img class="img-fluid" src="./assets/truck-back.webp" alt="">
+                    </div>
+
+                    <div class="col pt-2">
+
+                        <div class="row-cols-2">
+                            <div class="col-12">
+
+                                <img src="./assets/locker.png" alt="" width="30px">
+
+                                <p class="font-monospace text-white fs-3"> Dependable Service </p>
+                                <p class="font-monospace text-white fs-5"> We ensure on-time delivery with our fleet of
+                                    53-foot reefer units, maintaining high standards of care. </p>
+                            </div>
+                            <div class="col-12">
+
+                                <img src="./assets/web.png" alt="" width="30px">
+                                <p class="font-monospace text-white fs-3"> Specialized Equipment </p>
+                                <p class="font-monospace text-white fs-5">Our 53-foot reefer units are equipped for
+                                    over-the-road transportation, ensuring your perishable goods arrive fresh. </p>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div class="col">
-                </div>
-                <div class="col">
-                    Column
-                </div>
+
 
             </div>
         </section>
+
+        <section class="bg-dark"></section>
 
     </main>
 
