--- a/index.html
+++ b/index.html
@@ -318,8 +318,8 @@
             <div class="container text-center">
                 <div class="row text-white">
                     <div class="col">
-                        <div class="row-cols-2">
-                            <div class="col-12">
+                        <div class="row">
+                            <div class="col">
 
                                 <img src="./assets/locker.png" alt="" width="30px">
 
@@ -327,51 +327,163 @@
                                 <p class="font-monospace text-white fs-5"> We ensure on-time delivery with our fleet of
                                     53-foot reefer units, maintaining high standards of care. </p>
                             </div>
-                            <div class="col-12">
+                            <div class="row">
 
-                                <img src="./assets/web.png" alt="" width="30px">
-                                <p class="font-monospace text-white fs-3"> Specialized Equipment </p>
-                                <p class="font-monospace text-white fs-5">Our 53-foot reefer units are equipped for
-                                    over-the-road transportation, ensuring your perishable goods arrive fresh. </p>
+                                <div class="col">
+
+                                    <img src="./assets/web.png" alt="" width="30px">
+                                    <p class="font-monospace text-white fs-3"> Specialized Equipment </p>
+                                    <p class="font-monospace text-white fs-5">Our 53-foot reefer units are equipped for
+                                        over-the-road transportation, ensuring your perishable goods arrive fresh. </p>
+                                </div>
                             </div>
                         </div>
 
 
                     </div>
-                    <div class="col-sm-12">
-                        <div class="container">
-                            <img class="img-fluid" src="./assets/truck-back.webp" alt="">
-                        </div>
+                    <div class="col-12 col-md-6 py-5">
+                        <img class="img-fluid" src="./assets/truck-back.webp" alt="">
 
                     </div>
 
-                    <div class="col pt-2">
+                </div>
+            </div>
 
-                        <div class="row-cols-2">
-                            <div class="col-12">
 
-                                <img src="./assets/locker.png" alt="" width="30px">
+            <div class="col pt-2 text-center">
 
-                                <p class="font-monospace text-white fs-3"> Dependable Service </p>
-                                <p class="font-monospace text-white fs-5"> We ensure on-time delivery with our fleet of
-                                    53-foot reefer units, maintaining high standards of care. </p>
-                            </div>
-                            <div class="col-12">
+                <div class="row">
+                    <div class="col">
 
-                                <img src="./assets/web.png" alt="" width="30px">
-                                <p class="font-monospace text-white fs-3"> Specialized Equipment </p>
-                                <p class="font-monospace text-white fs-5">Our 53-foot reefer units are equipped for
-                                    over-the-road transportation, ensuring your perishable goods arrive fresh. </p>
-                            </div>
+                        <img src="./assets/locker.png" alt="" width="30px">
+
+                        <p class="font-monospace text-white fs-3"> Dependable Service </p>
+                        <p class="font-monospace text-white fs-5"> We ensure on-time delivery with our fleet of
+                            53-foot reefer units, maintaining high standards of care. </p>
+                    </div>
+                    <div class="row">
+
+                        <div class="col-12">
+
+                            <img src="./assets/web.png" alt="" width="30px">
+                            <p class="font-monospace text-white fs-3"> Specialized Equipment </p>
+                            <p class="font-monospace text-white fs-5">Our 53-foot reefer units are equipped for
+                                over-the-road transportation, ensuring your perishable goods arrive fresh. </p>
                         </div>
                     </div>
                 </div>
+            </div>
+            </div>
 
 
             </div>
         </section>
 
-        <section class="bg-dark"></section>
+        <!-- <section class="bg-dark">
+            <div class="row">
+                <div class="col">
+                    <div class=">
+
+                        <img class=" img-fluid" src="./assets/working.webp" alt="">
+                        <div id="carouselExampleSlidesOnly" class="carousel slide  top-50" data-bs-ride="carousel">
+                            <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                    <div class="container mt-5">
+                                        <div class="bg-black p-4 rounded">
+                                            <p class="mb-4">
+                                                Mondson Trucking consistently exceeds expectations with their timely
+                                                deliveries and top-notch care for our perishable goods. Their reliable,
+                                                family-owned approach ensures our freight arrives fresh and on schedule.
+                                            </p>
+                                            <div class="d-flex justify-content-between align-items-center">
+                                                <div class="d-flex align-items-center">
+                                                    <img alt="Portrait of Jane Rubby" class="rounded-circle me-3"
+                                                        height="50"
+                                                        src="https://storage.googleapis.com/a1aa/image/2ENCtFyNq77tAJRbaeRnxHKSKYZWme6LLgzTYsjQMe8r8BpnA.jpg"
+                                                        width="50" />
+                                                    <div>
+                                                        <div class="fw-bold">
+                                                            Jane Rubby
+                                                        </div>
+                                                        <div class="text-danger">
+                                                            Client
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="display-4 text-danger">
+                                                    99
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="carousel-item">
+                                    <div class="container mt-5">
+                                        <div class="bg-black p-4 rounded">
+                                            <p class="mb-4">
+                                                Mondson Trucking consistently exceeds expectations with their timely
+                                                deliveries and top-notch care for our perishable goods. Their reliable,
+                                                family-owned approach ensures our freight arrives fresh and on schedule.
+                                            </p>
+                                            <div class="d-flex justify-content-between align-items-center">
+                                                <div class="d-flex align-items-center">
+                                                    <img alt="Portrait of Jane Rubby" class="rounded-circle me-3"
+                                                        height="50"
+                                                        src="https://storage.googleapis.com/a1aa/image/2ENCtFyNq77tAJRbaeRnxHKSKYZWme6LLgzTYsjQMe8r8BpnA.jpg"
+                                                        width="50" />
+                                                    <div>
+                                                        <div class="fw-bold">
+                                                            Jane Rubby
+                                                        </div>
+                                                        <div class="text-danger">
+                                                            Client
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="display-4 text-danger">
+                                                    99
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="carousel-item">
+                                    <div class="container mt-5">
+                                        <div class="bg-black p-4 rounded">
+                                            <p class="mb-4">
+                                                Mondson Trucking consistently exceeds expectations with their timely
+                                                deliveries and top-notch care for our perishable goods. Their reliable,
+                                                family-owned approach ensures our freight arrives fresh and on schedule.
+                                            </p>
+                                            <div class="d-flex justify-content-between align-items-center">
+                                                <div class="d-flex align-items-center">
+                                                    <img alt="Portrait of Jane Rubby" class="rounded-circle me-3"
+                                                        height="50"
+                                                        src="https://storage.googleapis.com/a1aa/image/2ENCtFyNq77tAJRbaeRnxHKSKYZWme6LLgzTYsjQMe8r8BpnA.jpg"
+                                                        width="50" />
+                                                    <div>
+                                                        <div class="fw-bold">
+                                                            Jane Rubby
+                                                        </div>
+                                                        <div class="text-danger">
+                                                            Client
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="display-4 text-danger">
+                                                    99
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col"></div>
+            </div>
+        </section> -->
 
     </main>
 
