--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Mondson Trucking</title>
 </head>
 
-<body>
+<body class="text-white">
     <header>
         <!-- social section -->
         <section class="d-none d-lg-block">
@@ -346,144 +346,192 @@
 
                     </div>
 
-                </div>
-            </div>
 
 
-            <div class="col pt-2 text-center">
 
-                <div class="row">
-                    <div class="col">
 
-                        <img src="./assets/locker.png" alt="" width="30px">
+                    <div class="col pt-2 text-center">
 
-                        <p class="font-monospace text-white fs-3"> Dependable Service </p>
-                        <p class="font-monospace text-white fs-5"> We ensure on-time delivery with our fleet of
-                            53-foot reefer units, maintaining high standards of care. </p>
-                    </div>
-                    <div class="row">
+                        <div class="row">
+                            <div class="col">
 
-                        <div class="col-12">
+                                <img src="./assets/locker.png" alt="" width="30px">
 
-                            <img src="./assets/web.png" alt="" width="30px">
-                            <p class="font-monospace text-white fs-3"> Specialized Equipment </p>
-                            <p class="font-monospace text-white fs-5">Our 53-foot reefer units are equipped for
-                                over-the-road transportation, ensuring your perishable goods arrive fresh. </p>
+                                <p class="font-monospace text-white fs-3"> Dependable Service </p>
+                                <p class="font-monospace text-white fs-5"> We ensure on-time delivery with our fleet of
+                                    53-foot reefer units, maintaining high standards of care. </p>
+                            </div>
+                            <div class="row">
+
+                                <div class="col">
+
+                                    <img src="./assets/web.png" alt="" width="30px">
+                                    <p class="font-monospace text-white fs-3"> Specialized Equipment </p>
+                                    <p class="font-monospace text-white fs-5">Our 53-foot reefer units are equipped for
+                                        over-the-road transportation, ensuring your perishable goods arrive fresh. </p>
+                                </div>
+                            </div>
                         </div>
                     </div>
-                </div>
-            </div>
-            </div>
 
+                </div>
 
             </div>
         </section>
 
-        <!-- <section class="bg-dark">
-            <div class="row">
-                <div class="col">
-                    <div class=">
 
-                        <img class=" img-fluid" src="./assets/working.webp" alt="">
-                        <div id="carouselExampleSlidesOnly" class="carousel slide  top-50" data-bs-ride="carousel">
-                            <div class="carousel-inner">
+        <section class="bg-dark py-5">
+            <div class="container">
+                <div class="row gx-5">
+
+                    <div class="col-sm-12 position-relative ">
+
+                        <img class="img-fluid w-100" src="./assets/working.webp" alt="">
+                        <!-- carousal -->
+                        <div id="carouselExampleSlidesOnly" class="carousel slide container-fluid"
+                            data-bs-ride="carousel" style="position: absolute;top: 70%;">
+                            <div class="carousel-inner container-fluid ">
                                 <div class="carousel-item active">
-                                    <div class="container mt-5">
-                                        <div class="bg-black p-4 rounded">
-                                            <p class="mb-4">
-                                                Mondson Trucking consistently exceeds expectations with their timely
-                                                deliveries and top-notch care for our perishable goods. Their reliable,
-                                                family-owned approach ensures our freight arrives fresh and on schedule.
-                                            </p>
-                                            <div class="d-flex justify-content-between align-items-center">
-                                                <div class="d-flex align-items-center">
-                                                    <img alt="Portrait of Jane Rubby" class="rounded-circle me-3"
-                                                        height="50"
-                                                        src="https://storage.googleapis.com/a1aa/image/2ENCtFyNq77tAJRbaeRnxHKSKYZWme6LLgzTYsjQMe8r8BpnA.jpg"
-                                                        width="50" />
-                                                    <div>
-                                                        <div class="fw-bold">
-                                                            Jane Rubby
-                                                        </div>
-                                                        <div class="text-danger">
-                                                            Client
-                                                        </div>
+                                    <div class="container-fluid ">
+                                        <div class=" bg-secondary p-4 rounded row ">
+                                            <div class=" col ">
+                                                <p class=" mb-3">
+                                                    Mondson Trucking’s commitment to quality service is evident in every
+                                                    shipment.
+                                                    Their 53-foot reefer units handle our produce with care, making them
+                                                    a trusted
+                                                    partner in our supply chain.
+                                                </p>
+                                            </div>
+                                            <div class="d-flex align-items-center">
+                                                <img alt="Portrait of Thomas George" class="rounded-circle me-3"
+                                                    height="50"
+                                                    src="https://storage.googleapis.com/a1aa/image/foOO31owvszZXazfKPue1ZmNxZE2qNxxnRBOGWMIbefOZLmeE.jpg"
+                                                    width="50" />
+                                                <div>
+                                                    <div class="fw-bold">
+                                                        Thomas George
+                                                    </div>
+                                                    <div class="text-danger">
+                                                        Client
                                                     </div>
                                                 </div>
-                                                <div class="display-4 text-danger">
-                                                    99
-                                                </div>
+
+
                                             </div>
+
                                         </div>
                                     </div>
                                 </div>
                                 <div class="carousel-item">
-                                    <div class="container mt-5">
-                                        <div class="bg-black p-4 rounded">
-                                            <p class="mb-4">
-                                                Mondson Trucking consistently exceeds expectations with their timely
-                                                deliveries and top-notch care for our perishable goods. Their reliable,
-                                                family-owned approach ensures our freight arrives fresh and on schedule.
-                                            </p>
-                                            <div class="d-flex justify-content-between align-items-center">
-                                                <div class="d-flex align-items-center">
-                                                    <img alt="Portrait of Jane Rubby" class="rounded-circle me-3"
-                                                        height="50"
-                                                        src="https://storage.googleapis.com/a1aa/image/2ENCtFyNq77tAJRbaeRnxHKSKYZWme6LLgzTYsjQMe8r8BpnA.jpg"
-                                                        width="50" />
-                                                    <div>
-                                                        <div class="fw-bold">
-                                                            Jane Rubby
-                                                        </div>
-                                                        <div class="text-danger">
-                                                            Client
-                                                        </div>
+                                    <div class="container-fluid ">
+                                        <div class=" bg-secondary p-4 rounded row ">
+                                            <div class=" col ">
+                                                <p class=" mb-3">
+                                                    Mondson Trucking’s commitment to quality service is evident in every
+                                                    shipment.
+                                                    Their 53-foot reefer units handle our produce with care, making them
+                                                    a trusted
+                                                    partner in our supply chain.
+                                                </p>
+                                            </div>
+                                            <div class="d-flex align-items-center">
+                                                <img alt="Portrait of Thomas George" class="rounded-circle me-3"
+                                                    height="50"
+                                                    src="https://storage.googleapis.com/a1aa/image/foOO31owvszZXazfKPue1ZmNxZE2qNxxnRBOGWMIbefOZLmeE.jpg"
+                                                    width="50" />
+                                                <div>
+                                                    <div class="fw-bold">
+                                                        Thomas George
+                                                    </div>
+                                                    <div class="text-danger">
+                                                        Client
                                                     </div>
                                                 </div>
-                                                <div class="display-4 text-danger">
-                                                    99
-                                                </div>
+
+
                                             </div>
+
                                         </div>
                                     </div>
                                 </div>
                                 <div class="carousel-item">
-                                    <div class="container mt-5">
-                                        <div class="bg-black p-4 rounded">
-                                            <p class="mb-4">
-                                                Mondson Trucking consistently exceeds expectations with their timely
-                                                deliveries and top-notch care for our perishable goods. Their reliable,
-                                                family-owned approach ensures our freight arrives fresh and on schedule.
-                                            </p>
-                                            <div class="d-flex justify-content-between align-items-center">
-                                                <div class="d-flex align-items-center">
-                                                    <img alt="Portrait of Jane Rubby" class="rounded-circle me-3"
-                                                        height="50"
-                                                        src="https://storage.googleapis.com/a1aa/image/2ENCtFyNq77tAJRbaeRnxHKSKYZWme6LLgzTYsjQMe8r8BpnA.jpg"
-                                                        width="50" />
-                                                    <div>
-                                                        <div class="fw-bold">
-                                                            Jane Rubby
-                                                        </div>
-                                                        <div class="text-danger">
-                                                            Client
-                                                        </div>
+                                    <div class="container-fluid ">
+                                        <div class=" bg-secondary p-4 rounded row ">
+                                            <div class=" col ">
+                                                <p class=" mb-3">
+                                                    Mondson Trucking’s commitment to quality service is evident in every
+                                                    shipment.
+                                                    Their 53-foot reefer units handle our produce with care, making them
+                                                    a trusted
+                                                    partner in our supply chain.
+                                                </p>
+                                            </div>
+                                            <div class="d-flex align-items-center">
+                                                <img alt="Portrait of Thomas George" class="rounded-circle me-3"
+                                                    height="50"
+                                                    src="https://storage.googleapis.com/a1aa/image/foOO31owvszZXazfKPue1ZmNxZE2qNxxnRBOGWMIbefOZLmeE.jpg"
+                                                    width="50" />
+                                                <div>
+                                                    <div class="fw-bold">
+                                                        Thomas George
+                                                    </div>
+                                                    <div class="text-danger">
+                                                        Client
                                                     </div>
                                                 </div>
-                                                <div class="display-4 text-danger">
-                                                    99
-                                                </div>
+
+
                                             </div>
+
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
+                        <!--  -->
+
+                        <!--  -->
+
+
                     </div>
+
+                    <div class="col-12 col-md-6 g-5 pt-sm-5 order-md-1 order-0">
+                        <div class="col">
+
+
+
+                            <p class="text-danger font-monospace lead">Testimonials</p>
+
+
+                            <p class="text-white font-monospace text-wrap fs-3">Exceptional Service and Reliability
+
+                            </p>
+
+                            <p class=" font-monospace fs-6">
+
+
+
+
+                                Our fresh freight on time and in perfect condition. Their personal touch and
+
+                                professionalism make them a top choice!
+
+                            </p>
+
+                        </div>
+
+                    </div>
+
                 </div>
-                <div class="col"></div>
+
+
+
             </div>
-        </section> -->
+            </div>
+
+        </section>
+
 
     </main>
 
