--- a/index.html
+++ b/index.html
@@ -8,8 +8,18 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Mondson Trucking</title>
 </head>
+<style>
+    .bg-img {
+        background: url("./assets/front-side.webp") no-repeat center center;
+        background-size: cover;
+        width: 50%;
+        height: 800px;
+        opacity: 0.5;
+    }
+</style>
 
-<body class="text-white">
+
+<body class="text-white ">
     <header>
         <!-- social section -->
         <section class="d-none d-lg-block">
@@ -384,15 +394,15 @@
             <div class="container">
                 <div class="row gx-5">
 
-                    <div class="col-sm-12 position-relative ">
+                    <div class="col-12 col-md-6 position-relative overflow-x-hidden">
 
                         <img class="img-fluid w-100" src="./assets/working.webp" alt="">
                         <!-- carousal -->
-                        <div id="carouselExampleSlidesOnly" class="carousel slide container-fluid"
-                            data-bs-ride="carousel" style="position: absolute;top: 70%;">
-                            <div class="carousel-inner container-fluid ">
+                        <div id="carouselExampleSlidesOnly" class="carousel slide " data-bs-ride="carousel"
+                            style="position: absolute;top: 70%; left: 30%;">
+                            <div class="carousel-inner  ">
                                 <div class="carousel-item active">
-                                    <div class="container-fluid ">
+                                    <div class="container w-100 z-1">
                                         <div class=" bg-secondary p-4 rounded row ">
                                             <div class=" col ">
                                                 <p class=" mb-3">
@@ -456,7 +466,7 @@
                                     </div>
                                 </div>
                                 <div class="carousel-item">
-                                    <div class="container-fluid ">
+                                    <div class="container ">
                                         <div class=" bg-secondary p-4 rounded row ">
                                             <div class=" col ">
                                                 <p class=" mb-3">
@@ -532,10 +542,155 @@
 
         </section>
 
+        <section class="py-5 bg-dark">
+            <div class="container">
+                <div class="row gx-5 align-items-center">
+                    <div class="col-6 ">
+                        <p class="font-monospace fs-5 text-danger">CONTACT US</p>
+                        <p class="font-monospace fs-3 ">
+
+                            Get in Touch Anytime, Anywhere
+
+                        </p>
+
+
+                        <p class="font-monospace fs-5">Contact us for personalized service and expert transportation
+                            solutions. We’re here to assist you!</p>
+                        <hr>
+                        <div class="row ">
+                            <div class="col">
+                                <div class="row ">
+                                    <div class="col-2 d-flex text-align-center">
+                                        <img class="img-fluid" src="./assets/phone-call.png" alt="">
+                                    </div>
+                                    <div class="col">
+                                        <p>Our Phone</p>
+                                        <p class="font-monospace fs-3">(855) 518-2854 </p>
+                                    </div>
+                                </div>
+
+
+
+
+
+                            </div>
+
+                        </div>
+                        <div class="row py-5">
+                            <div class="col">
+
+                                <div class="row ">
+                                    <div class="col-2 d-flex text-align-center">
+                                        <img class="img-fluid" src="./assets/email-fill.png" alt="">
+                                    </div>
+                                    <div class="col">
+                                        <p>Our Email</p>
+                                        <p class="font-monospace fs-3">Dispatch@mondsontrucking.com </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-6 bg-img">
+
+                    </div>
+
+                    <hr>
+
+                </div>
+            </div>
+
+        </section>
+
+        <section class="bg-dark py-5">
+            <div class="container-fluid">
+                <div class="row gx-5">
+                    <div class="col-12 col-md-4 bg-black mx-2 py-5">
+                        <div class="d-flex align-items-center">
+                            <img src="./assets/location.png" alt="" width="30px">
+                            <p class="font-monospace mb-0 ms-2">222 Strickland AVE Blackshear, GA, 31516</p>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-4 bg-black mx-2 py-5">
+                        <div class="d-flex align-items-center">
+                            <img src="./assets/phone.png" alt="" width="30px">
+                            <p class="font-monospace">
+                                (855) 518-2854
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-3 bg-black mx-2 py-5">
+                        <div class="d-flex align-items-center">
+                            <img src="./assets/mail.png" alt="" width="30px">
+                            <p class="font-monospace">
+                                Dispatch@mondsontrucking.com
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+
+
+
+            </div>
+            <hr>
+        </section>
+
 
     </main>
 
-    <footer></footer>
+    <footer class="bg-dark py-5">
+        <section>
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 col-md-4 text-center">
+                        <img src="./assets/logo.webp" alt="" width="200px">
+                        <p class="fs-4">Mondson Trucking, a family-owned Georgia business, excels in OTR transportation
+                            with a fleet of 53-foot reefer units, ensuring reliable delivery of fresh freight.</p>
+                    </div>
+                    <div class="col-12 col-md-8">
+                        <div class="row">
+                            <div class="col">
+                                <p class="fs-3 font-monospace">EXPLORE</p>
+                                <ul class="list-unstyled">
+                                    <li>Home</li>
+                                    <li>About Us</li>
+                                    <li>Services</li>
+                                    <li>Why Choose Us</li>
+                                    <li>Testimonials</li>
+                                    <li>Contact Us</li>
+                                </ul>
+                            </div>
+                            <div class="col">
+                                <p class="fs-3 font-monospace">SERVICES</p>
+                                <ul class="list-unstyled">
+                                    <li>Dry Van</li>
+                                    <li>Drop Equipment</li>
+                                    <li>Dedicated Fleet</li>
+                                    <li>Temp Controlled</li>
+                                    <li>Power Only</li>
+                                    <li>Flatbed</li>
+                                </ul>
+                            </div>
+                            <div class="col">
+                                <p class="fs-3 font-monospace">
+                                    FOLLOW US
+                                </p>
+                                <ul class="list-unstyled">
+                                    <li>Instagram</li>
+                                    <li>Linkedin</li>
+                                    <li>Telegram</li>
+                                    <li>Facebook</li>
+                                    <li>Youtube</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
