--- a/index.html
+++ b/index.html
@@ -125,10 +125,12 @@
 
                 <div class="container mt-5 pb-5">
                     <div class="row  ">
-                        <div class="col-6 ">
+                        <div class="col-12  col-md-6">
                             <img class="img-fluid" src="./assets/3rd-truck.webp" alt="">
+
+
                         </div>
-                        <div class="col-6">
+                        <div class="col-12 order-0 col-md-6 order-md-1">
                             <div class=" mt-5">
                                 <p class="fs-4 text-danger font-monospace">About Mondson Trucking</p>
                                 <p class="fs-1 text-white font-monospace">Commitment to Excellence</p>
@@ -174,22 +176,22 @@
         <section class="bg-black pt-5 pb-5">
 
 
-            <div class="container">
-                <p class="font-monospace text-danger fs-5">Our Services</p>
-                <div class="d-flex justify-content-between">
-                    <div class="">
+            <div class="row text-center">
+                <div class="col-12 col-md-8">
+                    <p class="font-monospace text-danger fs-5">Our Services</p>
+                    <p class="font-monospace text-white fs-3">Excellence in Transportation for Fresh Goods</p>
 
-                        <p class="font-monospace text-white fs-3">Excellence in Transportation for Fresh Goods</p>
-                    </div>
-                    <div class="">
-                        <button type="button" class="btn btn-danger">Contact Us</button>
-                    </div>
+                </div>
+                <div class="col-12 col-md-4">
+
+                    <button type="button" class="btn btn-danger">Contact Us</button>
+
                 </div>
             </div>
 
             <div class="container">
-                <div class="row ">
-                    <div class="col-4 bg-dark">
+                <div class="row gy-5">
+                    <div class="col-12 col-md-4 bg-dark">
                         <div class="container p-4">
                             <img class="img-fluid" src="./assets/ship-icon.webp" alt="" width="30px">
                             <p class="font-monospace text-white fs-3">Dry Van</p>
@@ -199,7 +201,7 @@
                             <img src="./assets/right-arrow.png" alt="" width="30px">
                         </div>
                     </div>
-                    <div class="col-4 bg-dark">
+                    <div class="col-12 col-md-4 bg-dark">
                         <div class="container p-4">
                             <img class="img-fluid" src="./assets/aeroplane-icon.webp" alt="" width="30px">
                             <p class="font-monospace text-white fs-3">Drop Equipment</p>
@@ -208,7 +210,7 @@
                             <img src="./assets/right-arrow.png" alt="" width="30px">
                         </div>
                     </div>
-                    <div class="col-4 bg-dark">
+                    <div class="col-12 col-md-4 bg-dark">
                         <div class="container p-4">
                             <img class="img-fluid" src="./assets/fleet-icon.webp" alt="" width="30px">
                             <p class="font-monospace text-white fs-3">Dedicated Fleet</p>
@@ -219,8 +221,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="row mt-3">
-                    <div class="col-4 bg-dark">
+                <div class="row gy-5 mt-3">
+                    <div class="col-12 col-md-4 bg-dark">
                         <div class="container p-4">
                             <img class="img-fluid" src="./assets/post-icon.webp" alt="" width="30px">
                             <p class="font-monospace text-white fs-3">Temp Controlled</p>
@@ -230,7 +232,7 @@
                             <img src="./assets/right-arrow.png" alt="" width="30px">
                         </div>
                     </div>
-                    <div class="col-4 bg-dark">
+                    <div class="col-12 col-md-4 bg-dark">
                         <div class="container p-4">
                             <img class="img-fluid" src="./assets/container-icon.webp" alt="" width="30px">
                             <p class="font-monospace text-white fs-3">Power Only</p>
@@ -240,7 +242,7 @@
                             <img src="./assets/right-arrow.png" alt="" width="30px">
                         </div>
                     </div>
-                    <div class="col-4 bg-dark">
+                    <div class="col-12 col-md-4 bg-dark">
                         <div class="container p-4">
                             <img class="img-fluid" src="./assets/container-icon.webp" alt="" width="30px">
                             <p class="font-monospace text-white fs-3">Flatbed</p>
@@ -251,8 +253,8 @@
                     </div>
 
                 </div>
-                <div class="row mt-3">
-                    <div class="col-4 bg-dark ">
+                <div class="row gy-5 mt-3">
+                    <div class="col-12 col-md-4 bg-dark ">
                         <div class="container p-4">
                             <img src="./assets/girl-icon.webp" alt="" width="30px">
                             <p class="font-monospace text-white fs-3">Drayage</p>
@@ -262,7 +264,7 @@
                             <img src="./assets/right-arrow.png" alt="" width="30px">
                         </div>
                     </div>
-                    <div class="col-4 bg-dark ">
+                    <div class="col-12 col-md-4 bg-dark ">
                         <div class="container p-4">
                             <img src="./assets/girl-icon.webp" alt="" width="30px">
                             <p class="font-monospace text-white fs-3">Expedited</p>
@@ -271,7 +273,7 @@
                             <img src="./assets/right-arrow.png" alt="" width="30px">
                         </div>
                     </div>
-                    <div class="col-4 bg-dark ">
+                    <div class="col-12 col-md-4 bg-dark ">
                         <div class="container p-4">
                             <img src="./assets/girl-icon.webp" alt="" width="30px">
                             <p class="font-monospace text-white fs-3">Partial Truckload</p>
@@ -295,7 +297,7 @@
 
             <div class="container bg-danger  ">
                 <div class="row ">
-                    <div class="col ">
+                    <div class="col-12 col-md-6 ">
                         <div class="container pt-5">
 
 
@@ -310,7 +312,7 @@
 
                         </div>
                     </div>
-                    <div class="col">
+                    <div class="col-12 col-md-6">
                         <img class="img-fluid" src="./assets/red-truck.webp" alt="">
                     </div>
                 </div>
@@ -545,7 +547,7 @@
         <section class="py-5 bg-dark">
             <div class="container">
                 <div class="row gx-5 align-items-center">
-                    <div class="col-6 ">
+                    <div class="col-12 col-md-6">
                         <p class="font-monospace fs-5 text-danger">CONTACT US</p>
                         <p class="font-monospace fs-3 ">
 
@@ -591,9 +593,9 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-6 bg-img">
 
-                    </div>
+
+                    <div class="col-12 col-md-6 bg-img w-100" style="width: 100%;"></div>
 
                     <hr>
 
@@ -687,6 +689,13 @@
                         </div>
                     </div>
                 </div>
+            </div>
+            <hr>
+        </section>
+
+        <section>
+            <div class="container text-center">
+                <p class="fs-6">Powered By Digital Growth Catalyze LLC</p>
             </div>
         </section>
 
