--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                                     <a class="nav-link text-white" href="#">Testimonials</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-white" href="#">Privacy Policy</a>
+                                    <a class="nav-link text-white" href="./privacypolicy.html">Privacy Policy</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link text-white" href="#">Contact Us</a>
@@ -115,10 +115,11 @@
     </header>
 
     <main>
-        <section>
+        <section class="bg-dark">
 
-            <div class="bg-dark">
+            <div class="">
                 <img class="img-fluid" src="./assets/main-truck.webp" alt="">
+
                 <div class="container mt-5">
                     <img class="img-fluid" src="./assets/2nd-truck.webp" alt="">
                 </div>
